<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/input"
        android:text="Type input here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/bExplicit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="explicit"
        android:text="@string/explicit"
        android:layout_below="@+id/input"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/bWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="web"
        android:text="@string/web"
        android:layout_below="@+id/bCall"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/bCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="custom"
        android:text="@string/custom"
        android:layout_below="@+id/bSearch"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/bSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="search"
        android:text="@string/search"
        android:layout_below="@+id/bWeb"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/bCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="telCall"
        android:text="@string/call"
        android:layout_below="@+id/bExplicit"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/bResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="callForRes"
        android:text="@string/resCall"
        android:layout_below="@+id/bCustom"
        android:layout_centerHorizontal="true"/>



</RelativeLayout>
